* Wed Mar 13 2013 Dan Prince <dprince@redhat.com> - 1.3.5
  -Add remote_exec retry for libvirt_provider (fixes issue where
   initial ssh command fails)

* Sun Mar 3 2013 Dan Prince <dprince@redhat.com> - 1.3.4
  -Improve libvirt file injection so it works with or without LVM. (sthaha)
  -Fix 'kytoon ssh' so it works with multiple args. (sthaha)
  -Exits with a non-zero value (1) on task failure. (sthaha)
  -Verbose output when image creation fails. (sthaha)

* Tue Feb 12 2013 Dan Prince <dprince@redhat.com> - 1.3.3
  -Update SELinux to set correct context on /root/.ssh as well.

* Mon Feb 11 2013 Dan Prince <dprince@redhat.com> - 1.3.2
  -Add 'selinux_enabled' option for libvirt provider. If set this
   option will set the SELinux context on /root/.ssh/authorized_keys
   in the instance thus making it ssh'able when SELinux is enabled.

* Thu Dec 13 2012 Dan Prince <dprince@redhat.com> - 1.3.1
  -SSH config fixes for libvirt and openstack providers. You can now
   ssh to localhost from the gateway node. (weird but constistent)
  -Add retry_attempts to remote_exec method
  -Update OpenStack provider to retry initial ssh config up to 3 times.

* Thu Dec 13 2012 Dan Prince <dprince@redhat.com> - 1.3.0
  -OpenStack: Switch to Fog.
  -OpenStack: Add support for automatic floating IP configuration via
   'assign_floating_ip' in server group json files.
  -OpenStack: Add support for security group names.
  -OpenStack: Add endpoint configs for region, service_type, service_name.
  -OpenStack: Configure ssh access within the server group.
  -Libvirt: grep correct dnsmasq leases file (use network name)
  -Libvirt: fix libvirt_use_sudo option (string conversion)
  -Libvirt: Configure ssh access within the server group.

* Mon Nov 26 2012 Dan Prince <dprince@redhat.com> - 1.2.5
  - Libvirt: ping test instances to ensure they have IPs before
    trying to configure hosts, etc.
  - Generate server group IDs with using Time.now.to_f