@@ -1,3 +1,7 @@
+* Fri Apr 26 2013 Dan Prince <dprince@redhat.com> - 1.3.6
+  -Set hostname domain to .local in /etc/hosts. This fixes
+   fqdn warnings with some config management tools.
+
 * Wed Mar 13 2013 Dan Prince <dprince@redhat.com> - 1.3.5
   -Add remote_exec retry for libvirt_provider (fixes issue where
    initial ssh command fails)
